Fixed overflowing text

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ code {
   border-radius: 5px;
   padding: 10px;
   margin: 5px;
+  overflow-x: scroll;
 }
 
 /* BEGIN PROJECT HERE */
